# mcp-build-chess-server

./: README.md  chess_api.py  main.py  pyproject.toml
src/chess_server/: server.py
src/mcp_build_chess_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
